# ortcxx

./: CMakeLists.txt  README.md
cmake/: onnxruntimeConfig.cmake
src/headers/: CMakeLists.txt  improc.cpp  improc.h  model.h
src/modules/model/: model.cpp
tests/: bbox.cpp  image.cpp
